# research-assist-ai

./: .env.example  .gitignore  AUTHOR-NOTES.md  LICENSE  README.md  docker-compose.yml  index.html
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  alembic.ini  config.yaml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 002_add_tsvector_trigger.py  55f174102612_initial_schema_with_pgvector.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py
backend/app/db/: base.py  dynamodb.py
backend/app/implementations/: bedrock_nova.py  celery_task_queue.py  pdf_parsers.py  pgvector_store.py  titan_embedding.py
backend/app/models/: __init__.py  database.py
backend/app/repositories/: chat_repo.py  chunk_repo.py  document_repo.py  project_repo.py
backend/app/routers/: admin.py  chats.py  documents.py  projects.py
backend/app/schemas/: __init__.py  chat.py  common.py  document.py  project.py  sse.py
backend/app/services/: chat_service.py  chunking_service.py  conversation_memory.py  document_service.py  prompts.py  (+4 more)
backend/scripts/: init_dynamodb.py  migrate_message_ids.py
backend/tests/: conftest.py  test_bedrock_nova.py  test_chat_repo.py  test_chat_service.py  test_chunk_repo.py  test_chunking_service.py  test_config.py  test_conversation_memory.py  test_document_repo.py  test_document_service.py  test_document_tasks.py  test_exception_handlers.py  test_pdf_parsers.py  test_pgvector_store.py  test_prompt_builder.py  test_retrieval_service.py  test_storage_service.py  test_titan_embedding.py
(+87 files in other folders)
